2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* Settings.cs: Added filters.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Settings.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Settings.csproj: Public beta release 3.2.99.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Settings.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Settings.csproj: Bump to version 3.2.0

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Settings.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Settings.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Settings.cs: Refactor and code cleanup.

2016-02-03  Natalia Portillo  <claunia@claunia.com>

	* Settings.cs:
	* docs/README.txt:
	* packages.config:
	* docs/LICENSE.txt:
	* docs/ChangeLog.txt:
	* docs/mono/index.xml:
	* docs/html/index.html:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Settings.csproj:
	* docs/mono/ns-Claunia.PropertyList.xml:
	* docs/mono/Claunia.PropertyList/UID.xml:
	* docs/html/Claunia.PropertyList/UID.html:
	* docs/mono/Claunia.PropertyList/NSSet.xml:
	* docs/mono/Claunia.PropertyList/NSDate.xml:
	* docs/mono/Claunia.PropertyList/NSData.xml:
	* docs/html/Claunia.PropertyList/NSSet.html:
	* docs/html/Claunia.PropertyList/index.html:
	* docs/html/Claunia.PropertyList/NSDate.html:
	* docs/mono/Claunia.PropertyList/NSArray.xml:
	* docs/html/Claunia.PropertyList/NSData.html:
	* docs/mono/Claunia.PropertyList/NSNumber.xml:
	* docs/mono/Claunia.PropertyList/NSObject.xml:
	* docs/mono/Claunia.PropertyList/NSString.xml:
	* docs/html/Claunia.PropertyList/NSArray.html:
	* docs/html/Claunia.PropertyList/NSNumber.html:
	* docs/html/Claunia.PropertyList/NSObject.html:
	* docs/html/Claunia.PropertyList/NSString.html: